--- a/css/responsiveness.css
+++ b/css/responsiveness.css
@@ -1,8 +1,3 @@
-.content {
-  display: flex;
-  flex-wrap: wrap;
-}
-
 .header__menu {
   display: none;
 }
@@ -24,7 +19,7 @@
     vertical-align: bottom; 
   }
   .post-title{
-    font-size: 0.5em;
+    font-size: 1em;
   }
   .nav {
     z-index: 10;
@@ -60,7 +55,7 @@
 }
 
 @media screen and (min-width: 850px) {
-  main,  .nav, .content {
+  main,  .nav, {
     width: 850px;
     margin-left: auto;
     margin-right: auto;
