--- a/css/responsiveness.css
+++ b/css/responsiveness.css
@@ -3,11 +3,19 @@
 }
 
 
-@media screen and (max-width: 610px) {
+@media screen and (max-width: 450px) {
   .header__logo {
     height: 30px;
     margin-right: 0.5em;
   }
+  .image_thumbnail {
+	height: auto;
+	width: 70%;
+	margin-right: 1em;
+	vertical-align: left;
+	margin-top: 12px;
+  }
+
   .header__title {
     margin-left: 0;
     font-size: 1em;
