--- a/css/responsiveness.css
+++ b/css/responsiveness.css
@@ -10,7 +10,7 @@
   }
   .image_thumbnail {
 	height: auto;
-	width: 20%;
+	width: 60px;
 	margin-right: 1em;
 	vertical-align: left;
 	margin-top: 12px;
